--- a/.github/workflows/guestbook.yml
+++ b/.github/workflows/guestbook.yml
@@ -56,6 +56,7 @@ jobs:
             const fileSystem = require('fs');
             const readme = fileSystem.readFileSync('README.md', 'utf8');
             fileSystem.writeFileSync('README.md', readme.replace(/(?<=<!-- Guestbook -->.*\n)[\S\s]*?(?=<!-- \/Guestbook -->|$(?![\n]))/gm, renderComments(result.repository.issue.comments.nodes)), 'utf8');
+          github-token: ${{ secrets.GUESTBOOK_README }}
       - name: Push guestbook update
         run: |
           git config --global user.name 'Github Actions'
